--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-<<<<<<< HEAD
   "type": "project",
-  "require": {},
+  "require": {
+    "jiny/mysql": "^0.2.0"
+  },
   "autoload": {
     "psr-4": {
       "App\\": "App/",
@@ -12,24 +13,3 @@
     ]
   }
 }
-=======
-    "type": "project",
-    "require": {
-
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "App/",
-            "Modules\\": "Modules/"
-        },
-        "files": [
-<<<<<<< HEAD
-            "Modules/helper.php"
-        ]
-=======
-			"Modules/helper.php"
-		]
->>>>>>> db2020/master
-    }
-}
->>>>>>> db2020/master
